# cosmoterm

./: .gitignore  CHANGELOG.md  LICENCE  pyproject.toml  requirements.txt
docs/: README.md
src/: client.py  cosmoterm.py  logo.txt  main.py  server.py
src/site/: main.py
src/site/static/: home.css
src/site/templates/: home.css  home.html
src/utils/: blockchain.py  client.py  logger.py  model.py  server.py
